--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -695,7 +695,7 @@
             }
 
             #classicViewTable .attendance-table {
-                min-width: 420px;
+                min-width: 450px;
                 width: 100%;
             }
 
@@ -898,7 +898,7 @@
             }
 
             #classicViewTable .attendance-table {
-                min-width: 360px;
+                min-width: 400px;
                 width: 100%;
             }
 
@@ -1079,6 +1079,27 @@
 
             .exemption-info {
                 padding: 12px;
+            }
+        }
+
+        /* iPhone Pro models and similar large phones */
+        @media (max-width: 430px) and (min-width: 390px) {
+            #classicViewTable .attendance-table {
+                min-width: 430px;
+            }
+        }
+
+        /* Standard iPhone and similar phones */
+        @media (max-width: 389px) and (min-width: 375px) {
+            #classicViewTable .attendance-table {
+                min-width: 410px;
+            }
+        }
+
+        /* Smaller phones */
+        @media (max-width: 374px) {
+            #classicViewTable .attendance-table {
+                min-width: 390px;
             }
         }
     </style>
