feedback repo changed

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -151,7 +151,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = "https://feedbackauto-jbcuvqxtpfffwphnezdnzy.streamlit.app/"; 
+        const API_BASE_URL = "https://feedback-auto-pgtg.onrender.com"; 
 
         const form = document.getElementById('feedbackForm');
         const startButton = document.getElementById('startButton');
